--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,17 @@
     text-align: center;
 }
 .card-container{
-    border: solid rgb(197, 193, 193) 2px;
     display: flex;
     padding: 2rem;
     justify-content: space-evenly;
     margin-top: 4rem;
     align-items: center;
+}
+.card{
+    border: solid 2px rgb(73, 13, 53);
+    padding: 1rem;
+    background-color: rgb(248, 247, 240);
+    color: rgb(11, 49, 11, 1);
 }
 .recipe-counter{
     display: flex;
@@ -18,7 +23,9 @@
 }
 h1{
     margin-top: 3rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
+    font-family: cursive;
+    font-weight: lighter;
 }
 li{
     margin-left: 1rem;
@@ -46,4 +53,22 @@ input{
     width: 40%;
     height: 2rem;
     box-shadow: 2px 2px 2px black;
+}
+/* styling the logIn form */
+.login-input{
+    width: 30%;
+    /* border: none;
+    border-bottom: solid rgb(133, 129, 129) 2px; */
+    outline: none;
+}
+.login-btn{
+    width: 8rem;
+    height: 2rem;
+    background-color: rgb(36, 7, 29);
+    border: none;
+    color: white;
+}
+.login-btn:hover{
+    cursor: pointer;
+    background-color: rgb(82, 29, 82);
 }
